# pulsarfab

./: .gitmodules  CLAUDE.md  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build.yml
firmware/: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
firmware/cmake/: stm32f405.cmake  stm32g030.cmake  stm32g071.cmake  stm32g0b1.cmake
firmware/common/: CMakeLists.txt
firmware/crunchdefender/: CMakeLists.txt
firmware/crunchdefender/docs/: autohome-algorithm.md  skywatcher-protocol.md
firmware/crunchdefender/inc/: stm32f4xx_hal_conf.h
firmware/crunchdefender/linker/: STM32F405RGTx_FLASH.ld
firmware/crunchdefender/src/: main.c  system_stm32f4xx.c
firmware/crunchdefender/startup/: startup_stm32f405xx.s
firmware/pulsardew/: CMakeLists.txt
firmware/pulsardew/inc/: stm32g0xx_hal_conf.h
firmware/pulsardew/linker/: STM32G0B1KBUx_FLASH.ld
firmware/pulsardew/src/: main.c  system_stm32g0xx.c
firmware/pulsardew/startup/: startup_stm32g0b1xx.s
firmware/pulsardewpro/: .gitignore  CMakeLists.txt  sdkconfig.defaults
firmware/pulsardewpro/main/: main.c
hardware/: Makefile  fp-lib-table  sym-lib-table
hardware/crunchdefender/: crunchdefender.kicad_pcb  crunchdefender.kicad_pro  crunchdefender.kicad_sch  fp-lib-table
hardware/lib/: ATTRIBUTIONS.md
hardware/lib/symbols/: pulsarfab.kicad_sym
hardware/pulsardew/: current_sense.kicad_sch  heater_channel.kicad_sch  ldo.kicad_sch  pulsardew.kicad_pcb  pulsardew.kicad_pro  pulsardew.kicad_sch  sht40.kicad_sch
hardware/pulsardewpro/: pulsardewpro.kicad_pcb  pulsardewpro.kicad_pro  pulsardewpro.kicad_sch  sym-lib-table
